--- a/frontend/templates/Residents/formResident.html
+++ b/frontend/templates/Residents/formResident.html
@@ -73,7 +73,7 @@
                     <div class="form-actions noborder ">
                         <h3 class="text-right ">
                             <button type="submit" class="btn blue"><i class="fa fa-pencil "></i> {{button}}</button>
-                            <button type="button" ui-sref="condominos()" class="btn default gray-font">Cancelar</button>
+                            <button type="button" ui-sref="condominos()" class="btn red default">Cancelar</button>
                           </h3>
                     </div>
 
