--- a/frontend/templates/Residents/formVehicule.html
+++ b/frontend/templates/Residents/formVehicule.html
@@ -67,7 +67,7 @@
                         <div class="form-actions noborder">
                             <h3 class="text-right">
                             <button type="submit" class="btn blue"><i class="fa fa-pencil"></i> {{button}}</button>
-                            <button type="button" class="btn default">Cancelar</button>
+                            <button type="button" class="btn red default">Cancelar</button>
                           </h3>
                         </div>
                     </div>
