--- a/frontend/templates/admin/house/form.html
+++ b/frontend/templates/admin/house/form.html
@@ -41,7 +41,6 @@
                 <form role="form" ng-submit="actionButton()">
                     <div class="form-body">
                         <div class="col-md-6">
-
                             <div class="form-group form-md-line-input">
                                 <input ng-model="house_number" type="text" class="form-control gray-font" id="form_control_1" required>
                                 <label for="form_control_1" class="font-15">Número de casa</label>
@@ -53,13 +52,25 @@
                                 <input ng-model="extension" type="text" class="form-control gray-font" id="form_control_1">
                                 <label for="form_control_1" class="font-15">Extensión</label>
                             </div>
-
-
                         </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="securityKey" type="text" class="form-control gray-font" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Clave de seguridad</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="emergencyKey" type="text" class="form-control gray-font" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Clave de emergencia</label>
+                            </div>
+                        </div>
+
+
                         <div class="form-actions noborder">
                             <h3 class="text-right">
                             <button type="submit" class="btn blue"><i class="fa fa-pencil"></i> {{button}}</button>
-                            <button type="button"  ui-sref="houses()" class="btn default gray-font">Cancelar</button>
+                            <button type="button"  ui-sref="houses()" class="btn red default">Cancelar</button>
                           </h3>
                         </div>
                     </div>
