--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -80,7 +80,7 @@
             </li>
 
 
-            <li ng-show="isResident()" class="start" ng-class="{ 'active' : active === 'residentsHouses' ||  active === 'vehiculesHouses' }">
+            <li ng-show="isResident()" class="start" ng-class="{ 'active' : active === 'residentsHouses' ||  active === 'vehiculesHouses'}">
                 <a href="javascript:;">
                     <i class="icon-home" aria-hidden="true"></i>
                     <span class="title "> Administrar</span>
@@ -98,12 +98,17 @@
                             <i class="fa fa-car" aria-hidden="true"></i> Vehiculos
                         </a>
                     </li>
+                    <li ui-sref="keysConguration()" ng-class="{ 'active' : active === 'keysConguration'}">
+                        <a href="">
+                            <i class="fa fa-key" aria-hidden="true"></i> Clave de seguridad
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li ng-show="isResident()" class="start" ng-class="{ 'active' : active === 'residentsVisitors'  }">
                 <a href="javascript:;">
                     <i class="fa fa-flag-o" aria-hidden="true"></i>
-                    <span class="title "> Reportes</span>
+                    <span class="title "> Reportar</span>
                     <span class="arrow "></span>
                     <span class="selected "></span>
                 </a>
@@ -115,15 +120,23 @@
                     </li>
                     <li>
                         <a href="">
-                            <i class="fa fa-clock-o" aria-hidden="true"></i> Servicio a domicilio
+                            <i class="fa fa-cutlery" aria-hidden="true"></i> Servicio a domicilio
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <i class="fa fa-clock-o " aria-hidden="true "></i> Ausencia en filial
+                            <i class="fa fa-home " aria-hidden="true "></i> Ausencia en filial
                         </a>
                     </li>
                 </ul>
+            </li>
+            <li ng-show="isResident()" ui-sref="reportEmergency()" class="start" ng-class="{ 'active' : active === 'reportemergencyactive' }">
+                <a href="javascript:;">
+                    <i class="fa fa-ambulance" aria-hidden="true"></i>
+                    <span class="title "> Reportar emergencia</span>
+                    <span class="selected "></span>
+                </a>
+
             </li>
 
         </ul>
