--- a/frontend/templates/admin/resident/form.html
+++ b/frontend/templates/admin/resident/form.html
@@ -92,7 +92,7 @@
                     <div class="form-actions noborder ">
                         <h3 class="text-right ">
                             <button type="submit" class="btn blue"><i class="fa fa-pencil "></i> {{button}}</button>
-                            <button type="button" ui-sref="residents()" class="btn default gray-font">Cancelar</button>
+                            <button type="button" ui-sref="residents()" class="btn red default">Cancelar</button>
                           </h3>
                     </div>
 
