--- a/frontend/templates/Residents/emergency.html
+++ b/frontend/templates/Residents/emergency.html
@@ -2,7 +2,7 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-ambulance"></i>
-            <a ui-sref="reportEmergency()">Reportar emergencia</a>
+            <a>Reportar emergencia</a>
         </li>
     </ul>
     <div class="page-toolbar">
@@ -10,7 +10,7 @@
     </div>
 </div>
 <div class="row">
-    <!-- <div class="col-md-12">
+    <div class="col-md-12">
         <form ng-submit="reportEmergency()">
             <div class="portlet light bordered">
                 <div class="portlet-title">
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </form>
-    </div> -->
+    </div>
 
 </div>
 
