--- a/frontend/templates/Residents/formResident.html
+++ b/frontend/templates/Residents/formResident.html
@@ -2,15 +2,15 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a ui-sref="home()">Condominio</a>
+            <a>Administrar</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="">Residentes</a>
+            <a>Residentes</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="">Registrar</a>
+            <a>Registrar</a>
         </li>
     </ul>
     <div class="page-toolbar">
@@ -37,19 +37,19 @@
                     <input type='file' id="imgInp" />
                     <div class="col-md-6 col-sm-6 marging-top-20">
                         <div class="form-group form-md-line-input">
-                            <input ng-model="name" type="text" class="form-control letters gray-font" id="form_control_1" required>
+                            <input ng-model="name" type="text" class="form-control letters gray-font" required>
                             <label for="form_control_1" class="font-15">Nombre</label>
                         </div>
                         <div class="form-group form-md-line-input">
-                            <input ng-model="last_name" type="text" class="form-control letters gray-font" id="form_control_1" required>
+                            <input ng-model="last_name" type="text" class="form-control letters gray-font" required>
                             <label for="form_control_1" class="font-15">Primer Apellido</label>
                         </div>
                         <div class="form-group form-md-line-input">
-                            <input ng-model="second_last_name" type="text" class="form-control letters gray-font" id="form_control_1" required>
+                            <input ng-model="second_last_name" type="text" class="form-control letters gray-font" required>
                             <label for="form_control_1" class="font-15">Segundo Apellido</label>
                         </div>
                         <div class="form-group form-md-line-input">
-                            <input ng-model="identification_number" type="text" class="form-control numbers gray-font" id="form_control_1" required>
+                            <input ng-model="identification_number" type="text" class="form-control numbers gray-font" required>
                             <label for="form_control_1" class="font-15">Número de cédula</label>
                         </div>
                     </div>
@@ -70,6 +70,7 @@
                         </div>
 
                     </div>
+                    <div class="height-12-percent col-md-6 col-sm-6 hidden-xs"></div>
                     <div class="form-actions noborder ">
                         <h3 class="text-right ">
                             <button type="submit" class="btn blue"><i class="fa fa-pencil "></i> {{button}}</button>
