--- a/frontend/templates/Residents/formVisitor.html
+++ b/frontend/templates/Residents/formVisitor.html
@@ -2,11 +2,11 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a ui-sref="home()">Reportar</a>
+            <a>Reportar</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="">Visitante</a>
+            <a>Visitante</a>
 
         </li>
 
@@ -30,10 +30,10 @@
                 </div>
                 <div class="portlet-body form">
                     <div class="col-md-6 col-sm-6 marging-top-20">
-                      <div class="form-group form-md-line-input">
-                          <input ng-model="identification_number" ng-change="findVisitor()" type="text" class="form-control numbers gray-font" id="form_control_1" required>
-                          <label for="form_control_1"  class="font-15">Número de cédula</label>
-                      </div>
+                        <div class="form-group form-md-line-input">
+                            <input ng-model="identification_number" ng-change="findVisitor()" type="text" class="form-control numbers gray-font" id="form_control_1" required>
+                            <label for="form_control_1" class="font-15">Número de cédula</label>
+                        </div>
                         <div class="form-group form-md-line-input">
                             <input ng-model="name" type="text" class="form-control letters gray-font" id="form_control_1" required>
                             <label for="form_control_1" class="font-15">Nombre</label>
