--- a/frontend/templates/Residents/index_residents.html
+++ b/frontend/templates/Residents/index_residents.html
@@ -7,11 +7,11 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a href="">Administrar</a>
+            <a>Administrar</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="">Habitantes</a>
+            <a> Habitantes</a>
         </li>
 
     </ul>
@@ -42,7 +42,7 @@
 
                     <div class="col-lg-12 col-md-12 small-margin-top">
                         <button type="submit" ui-sref="editCondomino({id:resident.id})" class="btn blue"><i class="fa fa-pencil "></i></button>
-                        <button type="submit" class="btn red"><i class="fa fa-trash "></i></button>
+                        <button type="submit" ng-click="deleteCondomino(resident.id,resident.house_id,resident.name,resident.last_name)" class="btn red"><i class="fa fa-trash "></i></button>
                     </div>
                 </div>
             </div>
