--- a/frontend/templates/Residents/index_visitors.html
+++ b/frontend/templates/Residents/index_visitors.html
@@ -3,15 +3,15 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a href="index.html">Condominio</a>
+            <a>Condominio</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#">Visitantes</a>
+            <a>Visitantes</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#">Consultar</a>
+            <a>Consultar</a>
         </li>
     </ul>
     <div class="page-toolbar">
@@ -45,7 +45,7 @@
         <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
             <h1 class="text-center">
               <img src="../../assets/global/img/loader4.gif" alt="" />
-    
+
             </h1>
         </div>
         <div class="display-none" id="prueba">
@@ -80,6 +80,7 @@
                     </table>
                 </div>
             </div>
+            <h1 class="text-center gray-font" ng-show="noVisitorsResult==1">No hay registro de visitantes</h1>
         </div>
 
     </div>
