--- a/frontend/templates/Residents/keyConfiguration.html
+++ b/frontend/templates/Residents/keyConfiguration.html
@@ -2,11 +2,11 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a ui-sref="home()">Administrar</a>
+            <a>Administrar</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="">Claves de seguridad</a>
+            <a>Claves de seguridad</a>
 
         </li>
 
@@ -25,9 +25,7 @@
                         <span class="caption-subject bold uppercase">Claves de seguridad</span>
 
                     </div>
-                    <div class="actions">
-                        <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""> </a>
-                    </div>
+
                 </div>
 
                 <div class="portlet-body form ">
@@ -55,7 +53,7 @@
                         </div>
 
                         <div class="form-group col-md-6 col-sm-6 col-xs-12 gray-font">
-                            <label for="form_control_1" class="font-15 ">Clave de seguridad</label>
+                            <label for="form_control_1" class="font-15 ">Clave de emergencia</label>
                             <div class="input-group">
 
                                 <span class="input-group-addon ">
@@ -68,7 +66,7 @@
                         <div class="form-actions noborder">
                             <h3 class="text-right">
                         <button type="submit" class="btn blue"><i class="fa fa-pencil"></i> Establecer</button>
-                        <button type="button" class="btn red default">Cancelar</button>
+                        <button type="button" ui-sref="condominos()" class="btn red default">Cancelar</button>
                       </h3>
                         </div>
                     </div>
