--- a/frontend/templates/admin/resident/form.html
+++ b/frontend/templates/admin/resident/form.html
@@ -77,7 +77,7 @@
                             <label for="form_control_1" class="font-15">Número celular</label>
                         </div>
                         <div class="form-group form-md-line-input ">
-                            <input ng-model="email" type="email" class="form-control gray-font" placeholder="" id="form_control_1" required>
+                            <input ng-model="email" type="email" class="form-control gray-font" placeholder="" id="form_control_1">
                             <label for="form_control_1" class="font-15">Correo electrónico</label>
                         </div>
                         <div ng-show="permisson ==2" class="form-group form-md-line-input has-info">
