--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -80,7 +80,7 @@
             </li>
 
 
-            <li ng-show="isResident()" class="start" ng-class="{ 'active' : active === 'residentsHouses' ||  active === 'vehiculesHouses'}">
+            <li ng-show="isResident()" class="start" ng-class="{ 'active' : active === 'residentsHouses' ||  active === 'vehiculesHouses' || active === 'keysConguration'}">
                 <a href="javascript:;">
                     <i class="icon-home" aria-hidden="true"></i>
                     <span class="title "> Administrar</span>
@@ -105,6 +105,7 @@
                     </li>
                 </ul>
             </li>
+
             <li ng-show="isResident()" class="start" ng-class="{ 'active' : active === 'residentsVisitors'  }">
                 <a href="javascript:;">
                     <i class="fa fa-flag-o" aria-hidden="true"></i>
@@ -130,13 +131,12 @@
                     </li>
                 </ul>
             </li>
-            <li ng-show="isResident()" ui-sref="reportEmergency()" class="start" ng-class="{ 'active' : active === 'reportemergencyactive' }">
+            <li ng-show="isResident()" ui-sref="reportEmergency()" class="start" ng-class="{ 'active' : active === 'reportemergencyactive'  }">
                 <a href="javascript:;">
                     <i class="fa fa-ambulance" aria-hidden="true"></i>
                     <span class="title "> Reportar emergencia</span>
                     <span class="selected "></span>
                 </a>
-
             </li>
 
         </ul>
@@ -150,5 +150,4 @@
         QuickSidebar.init(); // init quick sidebar
         Demo.init(); // init demo features
     });
-</script>
 </script>
