--- a/frontend/templates/admin/officer/form.html
+++ b/frontend/templates/admin/officer/form.html
@@ -21,21 +21,28 @@
 </div>
 <div class="" style="margin-top:30px">
 </div>
-<div class="row">
-    <div class="col-md-12">
-        <form ng-submit="actionButton()">
-            <div class="portlet light bordered">
-                <div class="portlet-title">
-                    <div class="caption font-green-haze">
-                        <i class="fa fa-user font-green-haze"></i>
-                        <span class="caption-subject bold uppercase">{{title}}</span>
+<div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+    <h1 class="text-center">
+        <img src="../../assets/global/img/loader4.gif" alt="" />
+
+    </h1>
+</div>
+<div class="display-none" id="edit_officer_form">
+    <div class="row">
+        <div class="col-md-12">
+            <form ng-submit="actionButton()">
+                <div class="portlet light bordered">
+                    <div class="portlet-title">
+                        <div class="caption font-green-haze">
+                            <i class="fa fa-user font-green-haze"></i>
+                            <span class="caption-subject bold uppercase">{{title}}</span>
+                        </div>
+                        <div class="actions">
+                            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
+                            </a>
+                        </div>
                     </div>
-                    <div class="actions">
-                        <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
-                        </a>
-                    </div>
-                </div>
-                <div class="portlet-body form display-none" id="register_edit_form">
+
                     <form role="form">
                         <div class="form-body">
 
@@ -67,20 +74,22 @@
                         <div class="form-actions noborder">
                             <h3 class="text-right">
                             <button type="submit" class="btn blue"><i class="fa fa-pencil"></i> {{button}}</button>
-                            <button type="button" class="btn red default">Cancelar</button>
+                            <button type="button" ui-sref="officers()" class="btn red default">Cancelar</button>
                           </h3>
                         </div>
                     </form>
+
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 <script>
     jQuery(document).ready(function() {
-        $("#register_edit_form").fadeIn("slow");
+        $("#loadingIcon").fadeIn("slow");
     });
 </script>
+
 <script type="text/javascript">
     $('.date-picker').datepicker({
         format: 'mm/dd/yyyy',
