--- a/frontend/templates/Residents/formVisitor.html
+++ b/frontend/templates/Residents/formVisitor.html
@@ -52,7 +52,7 @@
                         </div>
 
                         <div class="form-group form-md-line-input">
-                            <input ng-model="license_plate" type="text" style="text-transform:uppercase" class="form-control letters gray-font" id="form_control_1" required>
+                            <input ng-model="license_plate" type="text" style="text-transform:uppercase" class="form-control letters gray-font" id="form_control_1">
                             <label for="form_control_1" class="font-15">Número de placa (opcional)</label>
                         </div>
 
